# poke-ai

./: .gitignore  AGENTS.md  CLAUDE.md  IDEA.md  PROGRESS.md  README.md  website.md
agents/rival/: memory.md  persona.md
bridge/: .env.example  pyproject.toml  run.sh
bridge/src/pokelive_bridge/: __init__.py  battle_agent.py  config.py  gym_data.py  main.py  map_data.py  openai_client.py  pokemon_data.py  pokemon_text.py  prompts.py  rival_agent.py  rival_counter.py
bridge/tests/: test_api.py  test_battle_plan_reasoning.py  test_decomp_patch_artifacts.py  test_gym_data.py  test_lua_bridge_contract.py  test_openai_client.py  test_pokemon_data.py  test_pokemon_text.py  test_prompts.py  test_rival_counter.py
docs/: BUILD.md  CONTEXT.md  INSTRUCTIONS.md
emulator/lua/: codex_mailbox_bridge.lua  give_pokeballs.lua
patches/: 0001-add-professor-codex-prompt-ui.patch  0002-add-professor-codex-mailbox.patch  0003-route-professor-oak-to-codex.patch
pokefirered/: build.sh
pokefirered/data/: event_scripts.s  specials.inc
pokefirered/include/: naming_screen.h  pokelive_rival_ai.h
pokefirered/src/: battle_ai_script_commands.c  battle_main.c  codex_npc.c  naming_screen.c  pokemon.c  pokemon_icon.c  script_menu.c  string_util.c
sprite_gen/: main.py  process.py
website/: next.config.mjs  package-lock.json  package.json
website/app/: globals.css  layout.tsx
website/components/: ErrorDialog.tsx  FireRedPanel.tsx  HomeClient.tsx  IconPreview.tsx  ImageUpload.tsx  LoadingDialog.tsx  SpriteGeneratorForm.tsx  SpritePreview.tsx
website/lib/: icon-extract.ts  prompts.ts  (+3 more)
(+26 files in other folders)
